--- a/docs/en-gb/modules/crm/pages/messenger-testphase.adoc
+++ b/docs/en-gb/modules/crm/pages/messenger-testphase.adoc
@@ -12,11 +12,11 @@ The *CRM » Messenger (Test phase)* menu is structured as follows:
 
 image::crm:messenger-menu-structure.png[width=640, height=360]
 
-* *Navigation*: Here you can navigate through different parts of the menu. The currently selected area (blue background) is displayed in the main window on the right. Click on icon:menu[set=material] to expand or collapse the navigation bar. +
+* *Navigation*: Here you can navigate through different parts of the menu. The currently selected area (blue background) is displayed in the main window on the right. Click on icon:menu[set=material, role=darkGrey] to expand or collapse the navigation bar. +
 ** Available areas in the navigation: <<#create-message, New message>>, <<#group-function, Inbox>>, <<#new-messages, New messages>>, <<#my-messages, My messages>>, <<#trash, Trash>>.
 * *Toolbar*: Here you can <<#search-conversation, search>> for conversations, <<#configure-columns, adjust the columns in the overview>>, set the results to be shown per page and click through the pages with the conversations.
 * *Main window*: Here you can see whichever area is currently open. +
-** *Overview*: When you start a search, you’ll see the results in an overview. The overview provides information about the conversations found at a glance. You see, for example, the email addresses of the senders, the subject, the date when the message was received, the assigned tags and by means of the icon icon:attach_file[set=material], you can see whether the message has an attachment. +
+** *Overview*: When you start a search, you’ll see the results in an overview. The overview provides information about the conversations found at a glance. You see, for example, the email addresses of the senders, the subject, the date when the message was received, the assigned tags and by means of the icon icon:attach_file[set=material, role=darkGrey], you can see whether the message has an attachment. +
 ** *Detail view*: When you open a message, the details will become visible below the main window. The detail view of a message is divided into the conversation, i.e. the message stream, and the editor where you type in your replies.
 
 [discrete]
@@ -94,9 +94,7 @@ In this step, activate the Messenger service. If the button is blue (icon:toggle
 
 In this step, a cryptic email address is automatically created that builds the forwarding email address. Use this email address to set up your email client. This ensures that your emails will be forwarded automatically. Note that you _cannot_ change this cryptic email address.
 
-In the lower part, enter all email addresses that are allowed to send messages to the cryptic, forwarding email address stated above.
-
-You can add as many email addresses as you like by clicking on *Add* (icon:plus-square[role="green"]).
+In the lower part, enter all email addresses that are allowed to send messages to the cryptic, forwarding email address stated above. You can add as many email addresses as you like by clicking on *Add* (icon:plus-square[role="green"]).
 
 [#verification-email-addresses]
 ==== Verification of email addresses
@@ -127,13 +125,13 @@ The following Messenger-related variables are available in the EmailBuilder:
 [TIP]
 .Use the default template
 ====
-In the *CRM » EmailBuilder* menu, you can find the *Messenger* folder that contains a default template for the messenger. You can, of course, adjust this template according to your needs. The template contains the following variables:
+In the *CRM » EmailBuilder (Test phase)* menu, you can find the *Messenger* folder that contains a default template for the messenger. You can, of course, adjust this template according to your needs. The template contains the following variables:
 
 * Full name
 * Message content
 * Signature in HTML format
-* Conversation ID
-** The variable *Conversation ID* serves as unique identifier to make sure that the message is always correctly assigned.
+* Message conversation ID
+** The variable *Message conversation ID* serves as unique identifier to make sure that the message is always correctly assigned. This is why this variable should _not_ be removed from the template.
 ====
 
 [#settings-email-receipt]
@@ -148,7 +146,7 @@ In the last section, select the subscribers who should be informed in case of ne
 
 To be able to send messages with the messenger, you need to set the test mode in the *Setup » Client » [Select client] » Email » Login details* to *inactive*.
 
-Setting the test mode to *inactive* can be done in this step. To do so, select (icon:check_box[set=material, role=skyBlue]) the option *Activate live mode*.
+You can set the test mode to *inactive* in this step without having to leave the assistant. To do so, select (icon:check_box[set=material, role=skyBlue]) the option *Activate live mode*.
 
 [#create-message]
 == Creating a message
@@ -189,7 +187,7 @@ image::crm:messenger-new-message-suggestion-list.png[width=640, height=360]
 |Enter the content of the message here.
 
 |[#intable-add-attachments]*Add attachments* (icon:attach_file[set=material, role=darkGrey])
-|Click on icon:attach_file[set=material] to add attachments to your message. Select as many attachments as you like from your computer. +
+|Click on icon:attach_file[set=material, role=darkGrey] to add attachments to your message. Select as many attachments as you like from your computer. +
 The following file types can be sent as an attachment: bmp, csv, gif, jpeg, json, pdf, png, tiff, txt, xlsx, zip.
 
 |[#intable-whisper-mode]*Whisper mode* (icon:visibility[set=material, role=darkGrey] / icon:visibility_off[set=material, role=skyBlue])
@@ -204,10 +202,10 @@ In the overview, whispered messages are shown in _italics_. +
 *_Important:_* To be able to <<#intable-bill-message, bill>> the message, you have to create at least one tag of the type *Messages (billable)*.
 
 |[#intable-bill-message]*Bill message* (icon:more_vert[set=material, role=darkGrey])
-|You can always bill a message as long as it is a <<#intable-whisper-mode, whispered message>>. Click on icon:more_vert[set=material] first. If you then activate the button *Bill message* (icon:toggle_on[set=material, role=skyBlue]), this message will be billed. The button changes from icon:forward_to_inbox[set=material, role=skyBlue] *SEND* to icon:visibility_off[set=material, role=skyBlue] *BILL AND SEND*. +
+|You can always bill a message as long as it is a <<#intable-whisper-mode, whispered message>>. Click on icon:more_vert[set=material, role=darkGrey] first. If you then activate the button *Bill message* (icon:toggle_on[set=material, role=skyBlue]), this message will be billed. The button changes from icon:forward_to_inbox[set=material, role=skyBlue] *SEND* to icon:visibility_off[set=material, role=skyBlue] *BILL AND SEND*. +
 *_Note:_* You can only activate the button *Bill message* if the <<#intable-whisper-mode, whisper mode>> has been activated for this message.
 
-|[#intable-timer]*Timer* (icon:more_vert[set=material])
+|[#intable-timer]*Timer* (icon:more_vert[set=material, role=darkGrey])
 |You can start a timer for every message. Click on icon:more_vert[set=material, role=darkGrey] first. If you activate the *Timer* button (icon:toggle_on[set=material, role=skyBlue]), the timer next to the icon:forward_to_inbox[set=material, role=skyBlue] *SEND* button will start running automatically. +
 Click on icon:pause_circle[set=material, role=darkGrey] to stop the timer and on icon:play_circle[set=material, role=darkGrey] to start the timer again.
 
@@ -226,7 +224,7 @@ Click on icon:pause_circle[set=material, role=darkGrey] to stop the timer and on
 [#search-conversation]
 == Searching for a conversation in the Messenger
 
-Open all conversations in a list or select filters (icon:tune[set=material]) to narrow down the search results in the Messenger overview.
+Open all conversations in a list or select filters (icon:tune[set=material, role=darkGrey]) to narrow down the search results in the Messenger overview.
 
 Once you have found the desired conversation, you can <<#open-single-message, open>> the single messages that are contained in the conversation.
 
@@ -255,8 +253,13 @@ Searching for a conversation in the Messenger:
 |Enter a date or select the dates from the calendars (icon:today[set=material, role=darkGrey]) to search for conversations within a certain time period.
 
 |[#intable-filter-referrer]*Referrer*
-|Select a referrer to only search for conversations with this referrer. +
-Available options: *Back end*, *REST*, *Plugin* and *PayPal plugin* (icon:pay_5_paypal[set=plenty]).
+a|Select a referrer to only search for conversations with this referrer. +
+Possible values: 
+
+* *Back end*
+* *REST*
+* *Plugin*
+* *PayPal plugin* (icon:paypal[role="darkGrey"])
 
 |[#intable-filter-status]*Status*
 |Select a status to search for conversations with this specific status. +
@@ -282,7 +285,7 @@ Available values: *Done* and *Not done*.
 |Select (icon:check_box[set=material, role=skyBlue]) tags to only search for conversations with these <<#tags-messenger, tags>>.
 
 |[#intable-filter-payment-id]*Payment ID*
-|Enter an ID to only search for conversations that are linked with this payment ID.
+|Enter an ID to only search for conversations that are linked with this xref:payment:beta-managing-payments-new.adoc#[payment ID].
 
 |[#intable-filter-reset]*Reset*
 |Resets the selected filter criteria.
@@ -359,8 +362,13 @@ You can have the following columns displayed in the overview of the Messenger:
 |Right next to the title bar, click on icon:arrow_upward[set=material, role=darkGrey] or icon:arrow_downward[set=material, role=darkGrey] to sort the table in ascending or descending order by the ID.
 
 |[#intable-overview-referrer]*Referrer*
-|Shows with the symbol the referrer of the message. +
-Available options: *Back end*, *REST*, *Plugin* and *PayPal plugin* (icon:pay_5_paypal[set=plenty]).
+a|Shows with the symbol the referrer of the message. +
+Possible values: 
+
+* *Back end*
+* *REST*
+* *Plugin*
+* *PayPal plugin* (icon:paypal[role="darkGrey"])
 
 |[#intable-overview-relations]*Relations*
 a|The conversation relations are shown here, for example:
@@ -374,7 +382,8 @@ a|The conversation relations are shown here, for example:
 
 In the line of the conversation, click on icon:chevron_right[set=material, role=darkGrey] to see all available relations at a glance. Click on icon:expand_more[set=material, role=darkGrey] to close the relation area again. +
 
-*_Note:_* The xref:crm:contacts.adoc#[contact] has a direct link to the corresponding data record in the *CRM » Contacts* menu. +
+*_Note:_* +
+The xref:crm:contacts.adoc#[contact] has a direct link to the corresponding data record in the *CRM » Contacts* menu. +
 The xref:orders:managing-orders.adoc#[order] has a direct link to the corresponding data record in the *Orders » Edit orders* menu. +
 The xref:orders:subscription.adoc#[subscription] has a direct link to the corresponding data record in the *Orders » Subscriptions (Test phase)* menu. +
 The xref:stock-management:managing-reorders.adoc#[reorder] has a direct link to the corresponding data record in the *Stock » Purchase order* menu. +
@@ -393,13 +402,13 @@ The xref:payment:beta-managing-payments-new.adoc#[payment] has a direct link to 
 |Shows the <<#context-menu-tags-conversation, tags>> that are assigned to the conversation.
 
 |[#intable-overview-attachments]*Attachments*
-|The symbol icon:attach_file[set=material] in the *Number of attachments* (icon:attach_file[set=material, role=darkGrey]) column shows whether the conversation has attachments. When you hover with your cursor over the symbol, you can see how many attachments the conversation has. Right next to the title bar, click on icon:arrow_upward[set=material, role=darkGrey] to sort the table by the number of attachments.
+|The symbol icon:attach_file[set=material, role=darkGrey] in the *Number of attachments* (icon:attach_file[set=material, role=darkGrey]) column shows whether the conversation has attachments. When you hover with your cursor over the symbol, you can see how many attachments the conversation has. Right next to the title bar, click on icon:arrow_upward[set=material, role=darkGrey] to sort the table by the number of attachments.
 
 |[#intable-overview-billed-messages]*Billed messages*
 |The symbol icon:credit_card[set=material, role=darkGrey] in the column *Billed messages* (icon:credit_card[set=material, role=darkGrey]) shows whether the conversation has billed messages. When you hover with your cursor over the symbol, you can see the number of billed messages. Right next to the title bar, click on icon:arrow_upward[set=material, role=darkGrey] to sort the table by the number of billed messages.
 
 |[#intable-overview-billed-minutes]*Billed minutes*
-|The symbol icon:av_timer[set=material] in the *Billed minutes* (icon:av_timer[set=material]) column shows whether the conversation has billed minutes. When you hover with your cursor over the symbol, you can see the number of billed minutes. Right next to the title bar, click on icon:arrow_upward[set=material] to sort the table by the number of billed minutes.
+|The symbol icon:av_timer[set=material, role=darkGrey] in the *Billed minutes* (icon:av_timer[set=material, role=darkGrey]) column shows whether the conversation has billed minutes. When you hover with your cursor over the symbol, you can see the number of billed minutes. Right next to the title bar, click on icon:arrow_upward[set=material, role=darkGrey] to sort the table by the number of billed minutes.
 
 |[#intable-overview-subscribed]*Subscribed*
 |The column icon:notifications[set=material, role=darkGrey] shows with the symbol icon:done[set=material, role=darkGrey] whether you have <<#subscribe-conversation, subscribed for>> the conversation.
@@ -418,7 +427,7 @@ TODO: wieder einfügen, wenn diese Funktion wieder eingebaut wurde.
 [#switch-view]
 === Switching the view
 
-It is possible to change the view in the Messenger from a table to a list. To do so, click on *Change view* (icon:list[set=material]) in the top right of the overview. +
+It is possible to change the view in the Messenger from a table to a list. To do so, click on *Change view* (icon:list[set=material, role=darkGrey]) in the top right of the overview. +
 The table view is selected by default.
 
 
@@ -430,7 +439,7 @@ The table view is selected by default.
 [#context-menu]
 == Editing conversations in the overview
 
-In the Messenger overview the following functions are available when clicking in the line of the conversation on icon:more_vert[set=material].
+In the Messenger overview the following functions are available when clicking in the line of the conversation on icon:more_vert[set=material, role=darkGrey].
 
 [[image-messenger-context-menu-overview]]
 .Editing a conversation via the context menu
@@ -687,7 +696,7 @@ Deleting a message:
 
 The link:https://marketplace.plentymarkets.com/en/paypaldispute_6582[PayPal Dispute^] plugin allows you to work on problems and solve conflicts with your customers directly in your plentymarkets system.
 
-The advantage of using the PayPal Dispute plugin is that you will be informed about all cases of customers that reported a problem with a merchandise or service to PayPal directly in your plentymarkets back end. Go to *CRM » Messenger* to see all dispute messages. The buyer has 4 options to report a problem. The reactions available to you depend on the problem reported by the customer and on the level of escalation the problem has reached. There are 2 escalation levels in case of problems. The first level is called *dispute* and the second level is called *claim*. The 4 options available to the buyer are the following:
+The advantage of using the PayPal Dispute plugin is that you will be informed about all cases of customers that reported a problem with a merchandise or service to PayPal directly in your plentymarkets back end. Go to *CRM » Messenger (Test phase)* to see all dispute messages. The buyer has 4 options to report a problem. The reactions available to you depend on the problem reported by the customer and on the level of escalation the problem has reached. There are 2 escalation levels in case of problems. The first level is called *dispute* and the second level is called *claim*. The 4 options available to the buyer are the following:
 
 * Item not received
 * Item not as described
@@ -771,8 +780,13 @@ You can have the following columns displayed in the *New messages* folder of the
 |Right next to the title bar, click on icon:arrow_upward[set=material, role=darkGrey] or icon:arrow_downward[set=material, role=darkGrey] to sort the table in ascending or descending order by the ID.
 
 |[#intable-new-messages-referrer]*Referrer*
-|Shows with the symbol the referrer of the message. +
-Available options: *Back end*, *REST*, *Plugin* and *PayPal plugin* (icon:pay_5_paypal[set=plenty]).
+a|Shows with the symbol the referrer of the message. +
+Possible values:
+
+* *Back end*
+* *REST*
+* *Plugin*
+* *PayPal plugin* (icon:paypal[role="darkGrey"])
 
 |[#intable-new-messages-relations]*Relations*
 a|The conversation relations are shown here, for example:
@@ -786,7 +800,8 @@ a|The conversation relations are shown here, for example:
 
 In the line of the conversation, click on icon:chevron_right[set=material, role=darkGrey] to see all available relations at a glance. Click on icon:expand_more[set=material, role=darkGrey] to close the relation area again.  +
 
-*_Note:_* The xref:crm:contacts.adoc#[contact] has a direct link to the corresponding data record in the *CRM » Contacts* menu. +
+*_Note:_* +
+The xref:crm:contacts.adoc#[contact] has a direct link to the corresponding data record in the *CRM » Contacts* menu. +
 The xref:orders:managing-orders.adoc#[order] has a direct link to the corresponding data record in the *Orders » Edit orders* menu. +
 The xref:orders:subscription.adoc#[subscription] has a direct link to the corresponding data record in the *Orders » Subscriptions (Test phase)* menu. +
 The xref:stock-management:managing-reorders.adoc#[reorder] has a direct link to the corresponding data record in the *Stock » Purchase order* menu. +
@@ -805,10 +820,10 @@ The xref:payment:beta-managing-payments-new.adoc#[payment] has a direct link to 
 |Shows the <<#context-menu-tags-conversation, tags>> that are assigned to the conversation.
  
 |[#intable-new-messages-attachments]*Attachments*
-|The symbol icon:attach_file[set=material] in the *Number of attachments* (icon:attach_file[set=material]) column shows whether the conversation has attachments. When you hover with your cursor over the symbol, you can see how many attachments the conversation has. Right next to the title bar, click on icon:arrow_upward[set=material] to sort the table by the number of attachments.
+|The symbol icon:attach_file[set=material, role=darkGrey] in the *Number of attachments* (icon:attach_file[set=material, role=darkGrey]) column shows whether the conversation has attachments. When you hover with your cursor over the symbol, you can see how many attachments the conversation has. Right next to the title bar, click on icon:arrow_upward[set=material, role=darkGrey] to sort the table by the number of attachments.
 
 |[#intable-new-messages-billed-messages]*Billed messages*
-|The symbol icon:credit_card[set=material] in the *Billed messages* (icon:credit_card[set=material]) column shows whether the conversation has billed messages. When you hover with your cursor over the symbol, you can see the number of billed messages. Right next to the title bar, click on icon:arrow_upward[set=material] to sort the table by the number of billed messages.
+|The symbol icon:credit_card[set=material, role=darkGrey] in the *Billed messages* (icon:credit_card[set=material, role=darkGrey]) column shows whether the conversation has billed messages. When you hover with your cursor over the symbol, you can see the number of billed messages. Right next to the title bar, click on icon:arrow_upward[set=material, role=darkGrey] to sort the table by the number of billed messages.
 
 |[#intable-new-messages-billed-minutes]*Billed minutes*
 |The symbol icon:av_timer[set=material, role=darkGrey] in the column *Billed minutes* (icon:av_timer[set=material, role=darkGrey]) shows whether the conversation has billed minutes. When you hover with your cursor over the symbol, you can see the number of billed minutes. Right next to the title bar, click on icon:arrow_upward[set=material, role=darkGrey] to sort the table by the number of billed minutes.
@@ -847,10 +862,10 @@ You can have the following columns displayed in the *My messages* folder of the 
 |Column |Explanation
 
 |[#intable-my-messages-extend-relations]*Extend relations*
-|Opens the available relations that are linked with the conversation by clicking on icon:chevron_right[set=material].
+|Opens the available relations that are linked with the conversation by clicking on icon:chevron_right[set=material, role=darkGrey].
 
 |[#intable-my-messages-selection]*Selection*
-|Shows the checkbox for the <<#group-function, group function>> (icon:check_box_outline_blank[set=material]) in the overview.
+|Shows the checkbox for the <<#group-function, group function>> (icon:check_box_outline_blank[set=material, role=darkGrey]) in the overview.
 
 |[#intable-my-messages-status]*Status*
 |Shows with the symbol icon:circle[set=material, role=skyBlue] that the message is still unread. Shows with the symbol icon:circle[set=material, role=green] that the message is closed.
@@ -859,8 +874,13 @@ You can have the following columns displayed in the *My messages* folder of the 
 |Right next to the title bar, click on icon:arrow_upward[set=material, role=darkGrey] or icon:arrow_downward[set=material, role=darkGrey] to sort the table in ascending or descending order by the ID.
 
 |[#intable-my-messages-referrer]*Referrer*
-|Shows with the symbol the referrer of the message. +
-Available options: *Back end*, *REST*, *Plugin* and *PayPal plugin* (icon:pay_5_paypal[set=plenty, role=darkGrey]).
+a|Shows with the symbol the referrer of the message. +
+Possible values:
+
+* *Back end*
+* *REST*
+* *Plugin*
+* *PayPal plugin* (icon:paypal[role="darkGrey"])
 
 |[#intable-my-messages-relations]*Relations*
 a|The conversation relations are shown here, for example:
@@ -874,7 +894,8 @@ a|The conversation relations are shown here, for example:
 
 In the line of the conversation, click on icon:chevron_right[set=material, role=darkGrey] to see all available relations at a glance. Click on icon:expand_more[set=material, role=darkGrey] to close the relation area again.  +
 
-*_Note:_* The xref:crm:contacts.adoc#[contact] has a direct link to the corresponding data record in the *CRM » Contacts* menu. +
+*_Note:_* +
+The xref:crm:contacts.adoc#[contact] has a direct link to the corresponding data record in the *CRM » Contacts* menu. +
 The xref:orders:managing-orders.adoc#[order] has a direct link to the corresponding data record in the *Orders » Edit orders* menu. +
 The xref:orders:subscription.adoc#[subscription] has a direct link to the corresponding data record in the *Orders » Subscriptions (Test phase)* menu. +
 The xref:stock-management:managing-reorders.adoc#[reorder] has a direct link to the corresponding data record in the *Stock » Purchase order* menu. +
@@ -893,7 +914,7 @@ The xref:payment:beta-managing-payments-new.adoc#[payment] has a direct link to 
 |Shows the <<#context-menu-tags-conversation, tags>> that are assigned to the conversation.
 
 |[#intable-my-messages-attachments]*Attachments*
-|The symbol icon:attach_file[set=material] in the *Number of attachments* (icon:attach_file[set=material, role=darkGrey]) column shows whether the conversation has attachments. When you hover with your cursor over the symbol, you can see how many attachments the conversation has. Right next to the title bar, click on icon:arrow_upward[set=material, role=darkGrey] to sort the table by the number of attachments.
+|The symbol icon:attach_file[set=material, role=darkGrey] in the *Number of attachments* (icon:attach_file[set=material, role=darkGrey]) column shows whether the conversation has attachments. When you hover with your cursor over the symbol, you can see how many attachments the conversation has. Right next to the title bar, click on icon:arrow_upward[set=material, role=darkGrey] to sort the table by the number of attachments.
 
 |[#intable-my-messages-billed-messages]*Billed messages*
 |The symbol icon:credit_card[set=material, role=darkGrey] in the column *Billed messages* (icon:credit_card[set=material, role=darkGrey]) shows whether the conversation has billed messages. When you hover with your cursor over the symbol, you can see the number of billed messages. Right next to the title bar, click on icon:arrow_upward[set=material, role=darkGrey] to sort the table by the number of billed messages.
@@ -947,8 +968,13 @@ You can have the following columns displayed in the trash folder of the Messenge
 |Right next to the title bar, click on icon:arrow_upward[set=material, role=darkGrey] or icon:arrow_downward[set=material, role=darkGrey] to sort the table in ascending or descending order by the ID.
 
 |[#intable-trash-referrer]*Referrer*
-|Shows with the symbol the referrer of the message. +
-Available options: *Back end*, *REST*, *Plugin* and *PayPal plugin* (icon:pay_5_paypal[set=plenty, role=darkGrey]).
+a|Shows with the symbol the referrer of the message. +
+Possible values:
+
+* *Back end*
+* *REST*
+* *Plugin*
+* *PayPal plugin* (icon:paypal[role="darkGrey"])
 
 |[#intable-trash-relations]*Relations*
 a|The conversation relations are shown here, for example:
@@ -962,7 +988,8 @@ a|The conversation relations are shown here, for example:
 
 In the line of the conversation, click on icon:chevron_right[set=material, role=darkGrey] to see all available relations at a glance. Click on icon:expand_more[set=material, role=darkGrey] to close the relation area again. +
 
-*_Note:_* The xref:crm:contacts.adoc#[contact] has a direct link to the corresponding data record in the *CRM » Contacts* menu. +
+*_Note:_* +
+The xref:crm:contacts.adoc#[contact] has a direct link to the corresponding data record in the *CRM » Contacts* menu. +
 The xref:orders:managing-orders.adoc#[order] has a direct link to the corresponding data record in the *Orders » Edit orders* menu. +
 The xref:orders:subscription.adoc#[subscription] has a direct link to the corresponding data record in the *Orders » Subscriptions (Test phase)* menu. +
 The xref:stock-management:managing-reorders.adoc#[reorder] has a direct link to the corresponding data record in the *Stock » Purchase order* menu. +
@@ -983,7 +1010,7 @@ The xref:payment:beta-managing-payments-new.adoc#[payment] has a direct link to 
  
 
 |[#intable-trash-attachments]*Attachments*
-|The symbol icon:attach_file[set=material] in the *Number of attachments* (icon:attach_file[set=material, role=darkGrey]) column shows whether the conversation has attachments. When you hover with your cursor over the symbol, you can see how many attachments the conversation has. Right next to the title bar, click on icon:arrow_upward[set=material, role=darkGrey] to sort the table by the number of attachments.
+|The symbol icon:attach_file[set=material, role=darkGrey] in the *Number of attachments* (icon:attach_file[set=material, role=darkGrey]) column shows whether the conversation has attachments. When you hover with your cursor over the symbol, you can see how many attachments the conversation has. Right next to the title bar, click on icon:arrow_upward[set=material, role=darkGrey] to sort the table by the number of attachments.
 
 |[#intable-trash-billed-messages]*Billed messages*
 |The symbol icon:credit_card[set=material, role=darkGrey] in the column *Billed messages* (icon:credit_card[set=material, role=darkGrey]) shows whether the conversation has billed messages. When you hover with your cursor over the symbol, you can see the number of billed messages. Right next to the title bar, click on icon:arrow_upward[set=material, role=darkGrey] to sort the table by the number of billed messages.
